releases/game.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: yutani
spec:
  replicas: 1
  selector:
    matchLabels:
      component: game
      app: yutani
  template:
    metadata:
      labels:
        component: game
        app: yutani
    spec:
      containers:
        - name: game
          image: mmacphail/yutani-game:sha-102d692
          resources:
            limits:
              cpu: "1"
              memory: "200Mi"
            requests:
              cpu: "0.5"
              memory: "100Mi"
          ports:
            - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: game
  namespace: yutani
spec:
  type: ClusterIP
  selector:
    component: game
    app: yutani
  ports:
    - port: 8080
      targetPort: 8080
