releases/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: yutani
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - yutani.macphail.eu
      secretName: yutani-macphail-eu
  rules:
    - host: yutani.macphail.eu
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend
              servicePort: 80
